# Image-Segregation

./: .ski.pgm.swp  CMakeCache.txt  CMakeLists.txt  Makefile  cam.pgm  cmake_install.cmake  csc  csc_example.cu  gc  gpu  gpu_seg  image.pgm  imagem.cpp  imagem.h  input  main.cpp  main.cu  mc.pgm  report-Copy1.ipynb  saida-seq.pgm  saida.pgm  segmentacao_sequencial  seq  ski.pgm  small.pgm
.ipynb_checkpoints/: report-Copy1-checkpoint.ipynb
